AddFundsBonus: usa "percent"

--- a/admin/app/views/bonus.scala.html
+++ b/admin/app/views/bonus.scala.html
@@ -90,7 +90,7 @@
 
             @myInputText(
             bonusForm("signupBonus_money"),
-            "Money",
+            "Money $",
             50
             )
         </div>
@@ -120,8 +120,8 @@
             )
 
             @myInputText(
-            bonusForm("addFundsBonus_multiplier"),
-            "Multiplier",
+            bonusForm("addFundsBonus_percent"),
+            "Percent %",
             10
             )
 
