--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -6,19 +6,19 @@
 @match_event_state(match_event : model.TemplateMatchEvent) = @{
     if(match_event.isGameFinished()) {
         "Finished"
+    } else if (match_event.isGameSimulated()) {
+        "Simulating"
+    } else if (match_event.isGameStarted()) {
+        "Live"
     } else {
-        if(match_event.isGameStarted()) {
-            "Live"
-        } else {
-            "Waiting"
-        }
+        "Waiting"
     }
 }
 
 @match_event_name(p : model.TemplateMatchEvent) = @{
     var teamA = ""
     var teamB = ""
-    if(p.isGameStarted()) {
+    if(p.isGameStarted() || p.isGameSimulated()) {
         if(templateSoccerTeamMap.containsKey(p.templateSoccerTeamAId)) {
             teamA = templateSoccerTeamMap(p.templateSoccerTeamAId).name + "(" + p.getFantasyPointsForTeam(p.templateSoccerTeamAId) + ")"
         } else {
@@ -103,6 +103,8 @@
                         if (data == "Finished") {
                             return '<button class="btn btn-danger">' + data + '</button>';
                         } else if (data == "Live") {
+                            return '<button class="btn btn-success">' + data + '</button>';
+                        } else if (data == "Simulating") {
                             return '<button class="btn btn-success">' + data + '</button>';
                         } else {
                             return '<button class="btn btn-warning">' + data + '</button>';
