--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -34,6 +34,7 @@
                 { "title": "Start Date" },
                 { "title": "Activation At" },
                 { "title": "" },
+                { "title": "" },
                 { "title": "" }
               ],
               "iDisplayLength": 100,
