--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -9,6 +9,20 @@
     @controllers.admin.FlashMessage.danger("Template MatchEvent Form has errors")
 }
 
+@boxValue = @{ true }
+
+@myCheckBox(field: Field, _label: String = "", _hidden: Boolean = false) = {
+<div class="form-group @if(field.hasErrors) {has-error}" @if(_hidden){ hidden }>
+    @if(_label.nonEmpty) { <label class="control-label col-sm-3" for="@field.id">@_label</label> }
+    <div class="col-sm-7">
+        <input type="checkbox" name="@field.id" id="@field.id" @if(field.value == boxValue) {checked} class="form-control">
+        @if(field.hasErrors){
+        <p class="help-block">@{field.error.map { error => error.message }}</p>
+        }
+    </div>
+</div>
+}
+
 @myInputText(field: Field, _label: String = "", _size: Int = 10, _hidden: Boolean = false) = {
 <div class="form-group @if(field.hasErrors) {has-error}" title="En el nombre se pueden usar las variables: %MaxEntries, %SalaryCap, %PrizeType, %EntryFee, %StartDate" @if(_hidden){ hidden }>
     @if(_label.nonEmpty) { <label class="control-label col-sm-3" for="@field.id">@_label</label> }
@@ -58,6 +72,18 @@
     <label class="col-sm-3 control-label" for="@field.id">@_label</label>
     <div class="col-sm-7">
         <input type="date" id="@field.id" name="@field.name" class="form-control" value="@field.value">
+        @if(field.hasErrors){
+        <p class="help-block">@{field.error.map { error => error.message }}</p>
+        }
+    </div>
+</div>
+}
+
+@myInputDateTime(field: Field, _label: String = "", _size: Int = 10, _hidden: Boolean = false) = {
+<div class="form-group @if(field.hasErrors) {has-error}" @if(_hidden){ hidden }>
+    <label class="col-sm-3 control-label" for="@field.id">@_label</label>
+    <div class="col-sm-7">
+        <input type="datetime-local" id="@field.id" name="@field.name" class="form-control" value="@field.value">
         @if(field.hasErrors){
         <p class="help-block">@{field.error.map { error => error.message }}</p>
         }
@@ -137,6 +163,18 @@
 
         <div class="col-md-7">
             <form class="form-horizontal">
+
+            @mySelect(
+                templateContestForm("typeContest"),
+                "Type",
+                options(EnumUtils.toMap(classOf[TypeContest])),
+                false,
+                1,
+                true,
+                "",
+                isActive
+            )
+
             @myInputText(
                 templateContestForm("name"),
                 "Name",
@@ -185,9 +223,16 @@
                 isActive
             )
 
-            @myInputDate(
+            @myInputDateTime(
                 templateContestForm("activationAt"),
-                "Activation At",
+                "Activation At (local)",
+                10,
+                isActive
+            )
+
+            @myInputDateTime(
+                templateContestForm("startDate"),
+                "Start Date (local)",
                 10,
                 isActive
             )
