VirtualMatchEventActor + <Player Live Events>.html

--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -27,7 +27,8 @@
                 { "title": "Max Entries" },
                 { "title": "TemplateContestId" },
                 { "title": "Competition" },
-                { "title": "State" }
+                { "title": "State" },
+                { "title": "" }
               ],
               "iDisplayLength": 100,
               "bProcessing": true,
