--- a/admin/app/views/template_contest.scala.html
+++ b/admin/app/views/template_contest.scala.html
@@ -13,6 +13,10 @@
             <button class="btn btn-warning">Waiting</button>
         }
     }
+
+    @if(template_contest.isSimulation()) {
+        <button class="btn btn-success">Simulation</button>
+    }
 }
 
 @match_event_state(match_event : model.TemplateMatchEvent) = {
