--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -86,9 +86,9 @@ function addMoney(target, amount) {
     </p>
 
     <select id="money-list" onchange="moneySelected = $('#money-list').val()" class="form-control" style="width: 130px; display: inline-block;">
-        <option value="5" selected="true">5€</option>
-        <option value="10">10€</option>
-        <option value="1000">1000€</option>
+        <option value="5" selected="true">5 GOLDS</option>
+        <option value="10">10 GOLDS</option>
+        <option value="1000">1000 GOLDS</option>
     </select>
     <button id="add-money-bots" type="button" onclick="addMoney('bots', moneySelected)" class="btn btn-primary" style="position:relative;">Añadir Fondos a Bots</button>
     <button id="add-money-tests" type="button" onclick="addMoney('tests', moneySelected)" class="btn btn-primary" style="position:relative;">Añadir Fondos a Tests</button>
