--- a/admin/app/views/user_transactions.scala.html
+++ b/admin/app/views/user_transactions.scala.html
@@ -39,7 +39,7 @@
 
 <div>
     <h3>@user.nickName (@user.email)</h3>
-    <div><strong>Balance Total:</strong> @user.calculateBalance()€</div>
+    <div><strong>Balance Total:</strong> @user.calculateBalance()</div>
 </div>
 <br/>
 <div class="table-responsive">
