--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -1,5 +1,6 @@
 @import controllers.admin.routes._
 @import actors.BotSystemActor
+@import utils._
 
 @(competitions_enabled : List[model.opta.OptaCompetition], botsState : BotSystemActor.ChildrenState)
 
@@ -86,9 +87,12 @@ function addMoney(target, amount) {
     </p>
 
     <select id="money-list" onchange="moneySelected = $('#money-list').val()" class="form-control" style="width: 130px; display: inline-block;">
-        <option value="5" selected="true">5 GOLDS</option>
-        <option value="10">10 GOLDS</option>
-        <option value="1000">1000 GOLDS</option>
+        <option value="CHF 5" selected="true">@MoneyUtils.asString("CHF 5")</option>
+        <option value="CHF 10">@MoneyUtils.asString("CHF 10")</option>
+        <option value="CHF 1000">@MoneyUtils.asString("CHF 1000")</option>
+        <option value="AUD 5">@MoneyUtils.asString("AUD 5")</option>
+        <option value="AUD 10">@MoneyUtils.asString("AUD 10")</option>
+        <option value="AUD 1000">@MoneyUtils.asString("AUD 1000")</option>
     </select>
     <button id="add-money-bots" type="button" onclick="addMoney('bots', moneySelected)" class="btn btn-primary" style="position:relative;">Añadir Fondos a Bots</button>
     <button id="add-money-tests" type="button" onclick="addMoney('tests', moneySelected)" class="btn btn-primary" style="position:relative;">Añadir Fondos a Tests</button>
