--- a/admin/app/views/user_list.scala.html
+++ b/admin/app/views/user_list.scala.html
@@ -1,6 +1,7 @@
 @(users: List[model.User])
 
 @import model._
+@import utils._
 @import controllers.admin.routes.DashboardController
 
 @scripts = {
@@ -15,7 +16,8 @@
                     { "title": "Email" },
                     { "title": "Created At" },
                     { "title": "Wins" },
-                    { "title": "Balance" },
+                    { "title": "Gold" },
+                    { "title": "Manager" },
                     { "title": "Bonus" }
                 ],
                 "data": [
@@ -28,17 +30,18 @@
                             "@p.email",
                             "@GlobalDate.formatDate(p.createdAt)",
                             "@p.wins",
-                            "@p.calculateBalance()",
-                            "@p.calculateBonus()"
+                            "@MoneyUtils.asString(p.calculateGoldBalance())",
+                            "@MoneyUtils.asString(p.calculateManagerBalance())",
+                            "@MoneyUtils.asString(p.calculateBonus())"
                         ] @if(index < users.size-1) { , }
                     }
                 ],
                 "columnDefs": [ {
-                    "targets": 7,
+                    "targets": [7, 8],
                     "mRender": function (data, type, full) {
                         return '<a href="user/' + full[0] + '/transactions">' + data + '</a>';
                     }
-                } ],
+                }],
                 stateSave: true,
                 iDisplayLength: 100,
                 "deferRender": true
