--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -25,6 +25,7 @@
                 { "title": "Name" },
                 { "title": "Current Users" },
                 { "title": "Max Entries" },
+                { "title": "Prize Pool" },
                 { "title": "TemplateContestId" },
                 { "title": "Competition" },
                 { "title": "State" },
