--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -30,6 +30,8 @@
                 { "title": "Max Entries" },
                 { "title": "Salary Cap" },
                 { "title": "Entry Fee" },
+                { "title": "Multiplier" },
+                { "title": "Pool" },
                 { "title": "Prize Type" },
                 { "title": "Start Date" },
                 { "title": "Activation At" },
