--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -268,6 +268,12 @@
                 isActive
             )
 
+            @myInputText(
+                templateContestForm("specialImage"),
+                "Special Image",
+                50
+            )
+
             </form>
 
             <h4>TABLA DE PREMIOS <span id="prize-pool"></span></h4>
