--- a/admin/app/views/user_list.scala.html
+++ b/admin/app/views/user_list.scala.html
@@ -19,7 +19,8 @@
                     { "title": "Gold" },
                     { "title": "Manager" },
                     { "title": "Energy" },
-                    { "title": "Earned Money" }
+                    { "title": "Earned Money" },
+                    { "title": "TrueSkill" }
                 ],
                 "data": [
                     @for((p, index) <- users.zipWithIndex) {
@@ -34,7 +35,8 @@
                             "@MoneyUtils.asString(p.calculateGoldBalance())",
                             "@MoneyUtils.asString(p.calculateManagerBalance())",
                             "@MoneyUtils.asString(p.calculateEnergyBalance())",
-                            "@MoneyUtils.asString(p.earnedMoney)"
+                            "@MoneyUtils.asString(p.earnedMoney)",
+                            "@p.trueSkill"
                         ] @if(index < users.size-1) { , }
                     }
                 ],
