fix TemplateContestController: prizeMultiplier

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -161,6 +161,10 @@
                 updatePrizes();
             });
 
+            if ($('#typeContest').val() == "REAL") {
+                $('#prizeMultiplier').val('0.9');
+                $('#prizeMultiplier').prop('disabled', true);
+            }
             updatePrizes();
         })
 
