--- a/admin/app/views/template_contest.scala.html
+++ b/admin/app/views/template_contest.scala.html
@@ -24,7 +24,7 @@
         <button class="btn btn-danger state_match_event">Finished</button>
     } else {
         @if(match_event.isGameStarted()) {
-            <button class="btn btn-success state_match_event">Live</button>
+            <button class="btn btn-success state_match_event">Live - @match_event.minutesPlayed min.</button>
         } else {
             <button class="btn btn-warning state_match_event">Waiting</button>
         }
