--- a/admin/app/views/excel.scala.html
+++ b/admin/app/views/excel.scala.html
@@ -15,8 +15,11 @@
         }
         </p>
         <p>
-            <a class="btn btn-primary" href="@ExcelController.writeSoccerPlayersLog" title="Write Players' Activity Log to Excel.">
-                Write Players' Activity
+            <a class="btn btn-primary" href="@ExcelController.writeSoccerPlayersLog(23)" title="Write Players' Activity Log to Excel.">
+                Write Players' Activity [Spanish La Liga]
+            </a>
+            <a class="btn btn-primary" href="@ExcelController.writeSoccerPlayersLog(8)" title="Write Players' Activity Log to Excel.">
+                Write Players' Activity [English Barclays Premier League]
             </a>
         </p>
     </div>
