TemplateContest / TemplateMatchEvent / TemplateSoccerTeam: se muestran los futbolistas disponibles (según el managerLevel)

--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -34,6 +34,7 @@
 } else {
     <a href="@TemplateMatchEventController.showOptaEvents(match_event.templateMatchEventId.toString())"><button class="btn btn-success">Opta Events</button></a>
 }
+<a href="@TemplateMatchEventController.showManagerLevels(match_event.templateMatchEventId.toString())"><button class="btn btn-success">Manager Levels</button></a>
 
 <h2 class="sub-header">Start Date: @GlobalDate.formatDate(match_event.startDate)</h2>
 <div class="table-responsive">
