--- a/admin/app/views/template_contest.scala.html
+++ b/admin/app/views/template_contest.scala.html
@@ -34,6 +34,9 @@
 @main("Template Contest - Admin") {
 
 <h1 class="page-header">Template Contest</h1>
+
+<a href="@TemplateContestController.showManagerLevels(template_contest.templateContestId.toString())"><button class="btn btn-success">Manager Levels</button></a>
+
 <h2 class="sub-header">@template_contest.name  @template_state</h2>
 <div class="table-responsive">
     <table id="table_id" class="table table-striped">
