--- a/admin/app/views/template_soccer_team.scala.html
+++ b/admin/app/views/template_soccer_team.scala.html
@@ -6,7 +6,10 @@
 
 <h1 class="page-header">Template Soccer Team</h1>
 
+<a href="@TemplateSoccerTeamController.showManagerLevels(template_soccer_team.templateSoccerTeamId.toString())"><button class="btn btn-success">Manager Levels</button></a>
+
 <h2 class="sub-header">@template_soccer_team.name</h2>
+
 <div class="table-responsive">
     <table id="table_id" class="table table-striped">
         <!--caption>@template_soccer_team.name</caption-->
