TemplateMatchEvent: Generar los resultados de varios partidos simulados

--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -33,6 +33,7 @@
     <a href="@TemplateMatchEventController.showSimulatedEvents(match_event.templateMatchEventId.toString())"><button class="btn btn-success">Simulated Events</button></a>
 } else {
     <a href="@TemplateMatchEventController.showOptaEvents(match_event.templateMatchEventId.toString())"><button class="btn btn-success">Opta Events</button></a>
+    <a href="@TemplateMatchEventController.simulate(match_event.templateMatchEventId.toString(), 10)"><button class="btn btn-success">Simulate</button></a>
 }
 <a href="@TemplateMatchEventController.showManagerLevels(match_event.templateMatchEventId.toString())"><button class="btn btn-success">Manager Levels</button></a>
 
