--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -35,6 +35,7 @@
               "bProcessing": true,
               "aaSorting": [[ 0, "asc" ]],
               "bServerSide": true,
+              "stateSave": true,
               "bJQueryUI": true,
               "sPaginationType": "full_numbers",
               "sAjaxSource": "/admin/contests/ajax"
