--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -43,6 +43,7 @@
               "bProcessing": true,
               "aaSorting": [[ 0, "asc" ]],
               "bServerSide": true,
+              "stateSave": true,
               "bJQueryUI": true,
               "sPaginationType": "full_numbers",
               "sAjaxSource": "/admin/template_contests/ajax"
