--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -35,6 +35,7 @@
               "bProcessing": true,
               "aaSorting": [[ 5, "desc" ]],
               "bServerSide": true,
+              "stateSave": true,
               "bJQueryUI": true,
               "sPaginationType": "full_numbers",
               "sAjaxSource": "/admin/template_match_events/ajax"
