--- a/admin/app/views/template_soccer_player_list.scala.html
+++ b/admin/app/views/template_soccer_player_list.scala.html
@@ -22,6 +22,7 @@
               "bProcessing": true,
               "aaSorting": [[ 0, "desc" ]],
               "bServerSide": true,
+              "stateSave": true,
               "bJQueryUI": true,
               "sPaginationType": "full_numbers",
               "sAjaxSource": "/admin/template_soccer_players/ajax"
