TemplateSoccerTeam: statistics to csv

--- a/admin/app/views/template_soccer_team.scala.html
+++ b/admin/app/views/template_soccer_team.scala.html
@@ -6,6 +6,7 @@
 
 <h1 class="page-header">Template Soccer Team</h1>
 
+<a href="@TemplateSoccerTeamController.statisticsToCSV(template_soccer_team.templateSoccerTeamId.toString())"><button class="btn btn-success">CSV</button></a>
 <a href="@TemplateSoccerTeamController.showManagerLevels(template_soccer_team.templateSoccerTeamId.toString())"><button class="btn btn-success">Manager Levels</button></a>
 
 <h2 class="sub-header">@template_soccer_team.name</h2>
