Signup: Bonus de Gold y Manager

--- a/admin/app/views/bonus.scala.html
+++ b/admin/app/views/bonus.scala.html
@@ -89,14 +89,21 @@
             )
 
             @myInputText(
-            bonusForm("signupBonus_money"),
-            "Money $",
+            bonusForm("signupBonus_gold"),
+            "Gold @",
+            50
+            )
+
+            @myInputText(
+            bonusForm("signupBonus_manager"),
+            "Manager ¥",
             50
             )
         </div>
     </div>
 
     <!-- Form Name -->
+    <!--
     <legend>Add Funds</legend>
 
     <div class="col-md-12">
@@ -109,13 +116,13 @@
 
             @myInputText(
             bonusForm("addFundsBonus_minMoney"),
-            "Min. Money $",
+            "Min. Money @",
             50
             )
 
             @myInputText(
             bonusForm("addFundsBonus_maxMoney"),
-            "Max. Money $",
+            "Max. Money @",
             50
             )
 
@@ -128,6 +135,7 @@
         </div>
 
     </div>
+    <-->
 
     <!-- Button (Double) -->
     <div class="control-group">
