templateContest: add liga/premier

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -180,6 +180,7 @@
 
     <input type="hidden" name="id" value='@templateContestForm("id").value' >
     <input type="hidden" name="createdAt" value='@templateContestForm("createdAt").value' >
+    <input type="hidden" name="optaCompetitionId" value='@templateContestForm("optaCompetitionId").value' >
     <input type="hidden" name="state" value='@templateContestForm("state").value' >
 
     <div class="col-md-12">
