--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -57,7 +57,8 @@
 
 <h1 class="page-header">Template Contests</h1>
 
-<a href="@TemplateContestController.newForm"><button class="btn btn-success">Add Contest</button></a>
+<a href="@TemplateContestController.newForm(23)"><button class="btn btn-success">[La Liga] Add Contest</button></a>
+<a href="@TemplateContestController.newForm(8)"><button class="btn btn-success">[Premier] Add Contest</button></a>
 
 @if(model.Model.isLocalHostTargetEnvironment()) {
 <div style="float: right; margin-right:100px;">
