contestController: únicamente se pueden importar torneos de simulación

--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -72,7 +72,7 @@
 </div>
 <p>
     @helper.form(action = ContestController.importFromCSV, 'enctype -> "multipart/form-data") {
-        <input class="btn btn-primary" type="submit" value="Import from CSV">
+        <input class="btn btn-primary" type="submit" value="Simulations from CSV">
         <input type="file" name="csv" style="display: inline;">
     }
 </p>
