TemplateContest from CSV

--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -67,7 +67,7 @@
 }
 
 <h1 class="page-header">Contests</h1>
-<div style="float: right; margin-right:100px;">
+<!--div style="float: right; margin-right:100px;">
     <a href="@ContestController.defaultCSV"><button class="btn btn-success">Default CSV</button></a>
 </div>
 <p>
@@ -75,7 +75,7 @@
         <input class="btn btn-primary" type="submit" value="Simulations from CSV">
         <input type="file" name="csv" style="display: inline;">
     }
-</p>
+</p-->
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
