--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -87,13 +87,22 @@
     </span>
     </h1>
 
+    <div style="float: right; margin-right:100px;">
+        <a href="@TemplateContestController.defaultCSV"><button class="btn btn-success">Default CSV</button></a>
+    </div>
+    <p>
+        @helper.form(action = TemplateContestController.importFromCSV, 'enctype -> "multipart/form-data") {
+        <input class="btn btn-primary" type="submit" value="Import from CSV">
+        <input type="file" name="csv" style="display: inline;">
+        }
+    </p>
+
     @if(competitionFilter == "*") {
         <a href="@TemplateContestController.newForm(23)"><button class="btn btn-success">[@competition_name("23")] Add Contest</button></a>
         <a href="@TemplateContestController.newForm(8)"><button class="btn btn-success">[@competition_name("8")] Add Contest</button></a>
     } else {
         <a href="@TemplateContestController.newForm(competitionFilter.toInt)"><button class="btn btn-success">[@competition_name(competitionFilter)] Add Contest</button></a>
     }
-
 
     @if(model.Model.isLocalHostTargetEnvironment()) {
     <div style="float: right; margin-right:100px;">
