admin: templateContest: se muestra el id del templateContest

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -168,8 +168,7 @@
 
 @main("Template Contest - Admin", scripts) {
 
-<h1 class="page-header">Template Contest</h1>
-
+<h1 class="page-header">Template Contest: [@templateContestForm("id").value]</h1>
 <h2 class="sub-header"></h2>
 
 @helper.form(action = TemplateContestController.create, 'class -> "form-horizontal") {
