--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -221,6 +221,13 @@
             )
 
             @myInputText(
+                templateContestForm("minEntries"),
+                "Min Entries",
+                10,
+                isActive
+            )
+
+            @myInputText(
                 templateContestForm("maxEntries"),
                 "Max Entries",
                 10,
