--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -43,7 +43,7 @@
                 { "title": "Num. Matches" },
                 { "title": "Competition" },
                 { "title": "Min Instances" },
-                { "title": "Max Entries" },
+                { "title": "Min/Max Entries" },
                 { "title": "Salary Cap" },
                 { "title": "Entry Fee" },
                 { "title": "Multiplier" },
