TemplateContestController: Posibilidad de especificar el PrizePool

--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -259,6 +259,13 @@
                 isActive
             )
 
+            @myInputText(
+                templateContestForm("prizePool"),
+                "Prize Pool",
+                10,
+                isActive
+            )
+
             @mySelect(
                 templateContestForm("prizeType"),
                 "Prize Type",
