--- a/admin/app/views/contest_list.scala.html
+++ b/admin/app/views/contest_list.scala.html
@@ -7,6 +7,7 @@
     <script type="text/javascript">
 
         function updatePage() {
+            @if(model.Model.isLocalHostTargetEnvironment()) {
             $.ajax({
                 url: "/admin/get_simulator_state",
                 success: function(result) {
@@ -15,6 +16,7 @@
                     }
                 }
             });
+            }
         }
 
         $(document).ready( function(){
