--- a/admin/app/views/player_fantasy_points.scala.html
+++ b/admin/app/views/player_fantasy_points.scala.html
@@ -6,6 +6,7 @@
 <script type="text/javascript">
 
         function updatePage() {
+            @if(model.Model.isLocalHostTargetEnvironment()) {
             $.ajax({
                 url: "/admin/get_simulator_state",
                 success: function(result) {
@@ -14,6 +15,7 @@
                     }
                 }
             });
+            }
         }
 
         $(document).ready( function(){
