--- a/admin/app/views/template_contest_list.scala.html
+++ b/admin/app/views/template_contest_list.scala.html
@@ -23,6 +23,7 @@
     <script type="text/javascript">
 
         function updatePage() {
+            @if(model.Model.isLocalHostTargetEnvironment()) {
             $.ajax({
                 url: "/admin/get_simulator_state",
                 success: function(result) {
@@ -31,6 +32,7 @@
                     }
                 }
             });
+            }
         }
 
         $(document).ready( function(){
