--- a/admin/app/views/template_match_event.scala.html
+++ b/admin/app/views/template_match_event.scala.html
@@ -36,7 +36,10 @@
     <a href="@TemplateMatchEventController.simulationsToCSV(match_event.templateMatchEventId.toString(), 10)"><button class="btn btn-success">Simulations to CSV</button></a>
 }
 <a href="@TemplateMatchEventController.showManagerLevels(match_event.templateMatchEventId.toString())"><button class="btn btn-success">Manager Levels</button></a>
-<a href="@TemplateMatchEventController.simulate(match_event.templateMatchEventId.toString())"><button class="btn btn-warning">Launch Test Simulation</button></a>
+
+@if(model.Model.isLocalHostTargetEnvironment()) {
+    <div style="float: right; margin-right:100px;"><a href="@TemplateMatchEventController.simulate(match_event.templateMatchEventId.toString())"><button class="btn btn-warning">Launch Test Simulation</button></a></div>
+}
 
 <h2 class="sub-header">Start Date: @GlobalDate.formatDate(match_event.startDate)</h2>
 <div class="table-responsive">
